Update architecture detecting logic